<resources>
    <string name="app_name" translatable="false">Lesson1Weather</string>
    <string name="city">Moscow</string>
    <string name="textView12">    Weather    </string>
    <string name="textView14"> |   Test14URA    |</string>
    <string name="today"> | Today  </string>
    <string name="tomorrow">  | Tomorrow  </string>
    <string name="dayAfter">  | Day after | </string>
    <string name="day">  Day     | </string>
    <string name="night">  Night | </string>

    <string name="ttodayday" translatable="false"> | 10° С  </string>
    <string name="ttodaynight" translatable="false"> | -1° С  </string>
    <string name="ttomorrowday" translatable="false">  | 12° С  </string>
    <string name="ttomorrownight" translatable="false">  | 3° С  </string>
    <string name="tdayAfterday" translatable="false">  | 11° С  </string>
    <string name="tdayAfternight" translatable="false">  | 4° С </string>

    <string name="settings">  Settings </string>
    <string name="air_pressure">  Display air pressure </string>
    <string name="wind_velocity">  Display wind velocity  </string>
    <string name="enter_city">  Please enter your city  </string>

    <string name="button_city1">  Moscow  </string>
    <string name="button_city2">  New York  </string>
    <string name="button_city3">  Washington  </string>
    <string name="button_city4">  London  </string>
    <string name="button_city5">  Berlin  </string>
    <string name="button_city6">  Paris  </string>
    <string name="button_city7">  Barcelona  </string>
    <string name="button_city8">  Minsk  </string>
    <string name="next">  Next  </string>


    <string name="switch_autolocation">   Automatic location detection  </string>
    <string name="switch_notiftcation">   Show temperature in notification </string>
    <string name="switch_temperatureincf">   Specify the temperature in F°  </string>
    <string name="switch_thrme">   Enable a dark theme  </string>
    <string name="configuration">   Сonfiguration  </string>
    <string name="back">   Back  </string>
    <string name="info">   Info  </string>


    <string name="text_instruction1">  Please select your city or enter it in the field below  </string>


</resources>
