<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/switch_wind"
        app:layout_constraintTop_toBottomOf="@+id/switch_pressure"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city1"
            android:layout_width="362dp"
            android:layout_height="match_parent"
            android:hint="@string/enter_city" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switch_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/wind_velocity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_pressure" />

    <Switch
        android:id="@+id/switch_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/air_pressure"
        app:layout_constraintEnd_toStartOf="@+id/switch_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settings" />

    <TextView
        android:id="@+id/textview_settings"
        android:layout_width="161dp"
        android:layout_height="61dp"
        android:clickable="false"
        android:gravity="start"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textview_instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/text_instruction1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:visibility="visible">


        <Button
            android:id="@+id/button_city1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_city1"/>

        <Button
            android:id="@+id/button_city2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_city1"
            android:text="@string/button_city2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_city3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_city2"
            android:text="@string/button_city3" />

        <Button
            android:id="@+id/button_city4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/button_city3"
            android:text="@string/button_city4" />


        <Button
            android:id="@+id/button_city5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_city1"
            android:layout_alignStart="@id/button_city1"
            android:text="@string/button_city5" />

        <Button
            android:id="@+id/button_city6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_city1"
            android:layout_toEndOf="@id/button_city5"
            android:text="@string/button_city6" />

        <Button
            android:id="@+id/button_city7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_city1"
            android:layout_toEndOf="@id/button_city6"
            android:text="@string/button_city7" />

        <Button
            android:id="@+id/button_city8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_city1"
            android:layout_toEndOf="@id/button_city7"
            android:text="@string/button_city8" />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>