<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.geekbrains.lesson3weather.MainActivity">

    <TableLayout
        android:id="@+id/WeatherForecast"
        android:layout_width="343dp"
        android:layout_height="145dp"
        android:background="#BCDEFA"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="visible">

        <TableRow
            android:id="@+id/Today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView12"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

        </TableRow>

        <TableRow
            android:id="@+id/Tomorrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"

                android:text="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView141"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />


        </TableRow>

        <TableRow
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttodayday"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttodaynight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />


        </TableRow>

        <TableRow
            android:id="@+id/TwoDayBefore"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttomorrowday"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ttomorrownight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />


        </TableRow>
        <TableRow
            android:id="@+id/DayBefore"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayAfter"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tdayAfterday"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tdayAfternight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:layout_editor_absoluteX="87dp"
                tools:layout_editor_absoluteY="70dp" />


        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/curentCity"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/WeatherForecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/WeatherForecast"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403"
        tools:text="@string/city" />

    <Button
        android:id="@+id/buttonConfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/configuration"
        app:layout_constraintBottom_toTopOf="@+id/WeatherForecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeatherForecast" />

    <Button
        android:id="@+id/openUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />
</androidx.constraintlayout.widget.ConstraintLayout>
